--- a/index.html
+++ b/index.html
@@ -1,94 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News Extractor & Code Generator</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
-        input, button { margin: 10px; padding: 10px; font-size: 16px; }
-        textarea { width: 90%; height: 120px; font-size: 14px; }
-        .pub-box { border: 1px solid #ccc; padding: 15px; margin-top: 20px; text-align: left; }
-        .pub-box img { max-width: 100%; height: auto; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>News Box Builder</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 20px;
+    }
+    input, textarea, button {
+      margin: 10px;
+      padding: 10px;
+      font-size: 16px;
+      width: 90%;
+      max-width: 600px;
+    }
+    .pub-box {
+      border: 1px solid #ccc;
+      padding: 15px;
+      margin-top: 20px;
+      text-align: left;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .pub-box img {
+      max-width: 100%;
+      height: auto;
+    }
+    #livePreview {
+      margin-top: 30px;
+    }
+  </style>
 </head>
 <body>
 
-    <h2>News Extractor & Code Generator</h2>
+  <h2>Manual News Box Generator</h2>
 
-    <label>News Page URL:</label>
-    <input type="text" id="newsUrl" placeholder="Enter news page URL">
-    <button onclick="fetchNewsInfo()">Fetch Info</button>
-    <button onclick="clearResults()">Clear Results</button>
+  <input type="text" id="mediaName" placeholder="Media Name (e.g., BBC)" oninput="updateLivePreview()">
+  <input type="text" id="newsUrl" placeholder="News Article URL" oninput="updateLivePreview()">
+  <input type="text" id="imageUrl" placeholder="Image URL" oninput="updateLivePreview()">
+  <input type="text" id="title" placeholder="Article Title" oninput="updateLivePreview()">
 
-    <h3>Generated Code:</h3>
-    <textarea id="generatedCode" readonly></textarea>
-    <br>
-    <button onclick="copyToClipboard()">Copy to Clipboard</button>
+  <button onclick="generateBox()">Generate Code</button>
+  <button onclick="clearResults()">Clear</button>
 
-    <div id="preview"></div>
+  <h3>Generated Code:</h3>
+  <textarea id="generatedCode" readonly></textarea>
+  <br>
+  <button onclick="copyToClipboard()">Copy to Clipboard</button>
 
-    <script>
-        async function fetchNewsInfo() {
-            const url = document.getElementById("newsUrl").value.trim();
-            if (!url) {
-                alert("Please enter a valid news URL!");
-                return;
-            }
+  <div id="livePreview"></div>
 
-            try {
-                const response = await fetch(`https://api.allorigins.hexlet.app/get?disableCache=true&url=${encodeURIComponent(url)}`);
-                if (!response.ok) throw new Error("Network response was not ok");
+  <script>
+    function updateLivePreview() {
+      const media = document.getElementById("mediaName").value.trim();
+      const url = document.getElementById("newsUrl").value.trim();
+      const img = document.getElementById("imageUrl").value.trim();
+      const title = document.getElementById("title").value.trim();
 
-                const result = await response.json();
-                const pageContent = result.contents;
+      const today = new Date();
+      const formattedDate = `${today.getDate()} ${today.toLocaleString('en-GB', { month: 'long' })} ${today.getFullYear()}`;
 
-                const mediaName = new URL(url).hostname.replace("www.", "");
+      if (media && url && img && title) {
+        document.getElementById("livePreview").innerHTML = `
+          <div class="pub-box">
+            <p>${media}</p>
+            <a href="${url}" target="_blank">
+              <img src="${img}" alt="News Image">
+              <p>${title}</p>
+              <p>Uploaded: ${formattedDate}</p>
+            </a>
+          </div>`;
+      } else {
+        document.getElementById("livePreview").innerHTML = "";
+      }
+    }
 
-                // Extract <title>
-                const titleMatch = pageContent.match(/<title.*?>(.*?)<\/title>/i);
-                const title = titleMatch ? titleMatch[1] : "Title Not Found";
+    function generateBox() {
+      const media = document.getElementById("mediaName").value.trim();
+      const url = document.getElementById("newsUrl").value.trim();
+      const img = document.getElementById("imageUrl").value.trim();
+      const title = document.getElementById("title").value.trim();
 
-                // Extract og:image from meta tag
-                let imgUrl = "Image Not Found";
-                const ogImageMatch = pageContent.match(/<meta[^>]+property=["']og:image["'][^>]+content=["']([^"']+)["']/i);
-                if (ogImageMatch) imgUrl = ogImageMatch[1];
+      if (!media || !url || !img || !title) {
+        alert("Please fill out all fields.");
+        return;
+      }
 
-                const today = new Date();
-                const formattedDate = `${today.getDate()} ${today.toLocaleString('en-GB', { month: 'long' })} ${today.getFullYear()}`;
+      const today = new Date();
+      const formattedDate = `${today.getDate()} ${today.toLocaleString('en-GB', { month: 'long' })} ${today.getFullYear()}`;
 
-                const generatedHTML = `
-                <div class="pub-box">
-                    <p>${mediaName}</p>
-                    <a href="${url}" target="_blank">
-                        <img src="${imgUrl}" alt="News Image">
-                        <p>${title}</p>
-                        <p>Uploaded: ${formattedDate}</p>
-                    </a>
-                </div>`;
+      const generatedHTML = `
+      <div class="pub-box">
+          <p>${media}</p>
+          <a href="${url}" target="_blank">
+              <img src="${img}" alt="News Image">
+              <p>${title}</p>
+              <p>Uploaded: ${formattedDate}</p>
+          </a>
+      </div>`;
 
-                document.getElementById("generatedCode").value = generatedHTML;
-                document.getElementById("preview").innerHTML = generatedHTML;
+      document.getElementById("generatedCode").value = generatedHTML;
+    }
 
-            } catch (error) {
-                alert("Error fetching the news page. Try another URL or check console.");
-                console.error("Fetch failed:", error);
-            }
-        }
+    function copyToClipboard() {
+      const textArea = document.getElementById("generatedCode");
+      textArea.select();
+      document.execCommand("copy");
+      alert("Code copied to clipboard!");
+    }
 
-        function copyToClipboard() {
-            const textArea = document.getElementById("generatedCode");
-            textArea.select();
-            document.execCommand("copy");
-            alert("Code copied to clipboard!");
-        }
-
-        function clearResults() {
-            document.getElementById("newsUrl").value = "";
-            document.getElementById("generatedCode").value = "";
-            document.getElementById("preview").innerHTML = "";
-        }
-    </script>
+    function clearResults() {
+      document.getElementById("mediaName").value = "";
+      document.getElementById("newsUrl").value = "";
+      document.getElementById("imageUrl").value = "";
+      document.getElementById("title").value = "";
+      document.getElementById("generatedCode").value = "";
+      document.getElementById("livePreview").innerHTML = "";
+    }
+  </script>
 
 </body>
 </html>
